[gd_scene load_steps=13 format=3 uid="uid://6rirwqrl30jg"]

[ext_resource type="Script" path="res://Scripts/world.gd" id="1_7s3px"]
[ext_resource type="PackedScene" uid="uid://cwakr1joaem2j" path="res://Scenes/ui.tscn" id="2_6sbxi"]
[ext_resource type="Script" path="res://Scripts/roguelike_tiles.gd" id="2_t5xrp"]
[ext_resource type="Script" path="res://Scripts/a_star_grid_node.gd" id="3_8ljqm"]
[ext_resource type="PackedScene" uid="uid://bwpi8ic3tesb8" path="res://Scenes/BaseRoom.tscn" id="4_w0hro"]
[ext_resource type="PackedScene" uid="uid://chxte6g0nwu8j" path="res://Scenes/Player.tscn" id="5_u4826"]
[ext_resource type="Script" path="res://Scripts/look_tool.gd" id="6_qxpnc"]
[ext_resource type="Texture2D" uid="uid://bdfti26osccyc" path="res://Sprites/roguelike-look-indicator.png" id="7_taxir"]
[ext_resource type="Texture2D" uid="uid://c33ewec2rb8yj" path="res://Sprites/roguelike-tiles-fog-of-war.png" id="9_ghnv2"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_kausf"]
vertices = PackedVector2Array(2358.28, -1158.49, 2453.68, 1894.13, -1126.47, 1941.87, -1285.47, -1349.43)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-1296, -1360, -1136, 1952, 2464, 1904, 2368, -1168)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vvyna"]
texture = ExtResource("9_ghnv2")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_eujck"]
tile_size = Vector2i(32, 32)
sources/1 = SubResource("TileSetAtlasSource_vvyna")

[node name="World" type="NavigationRegion2D"]
navigation_polygon = SubResource("NavigationPolygon_kausf")
script = ExtResource("1_7s3px")

[node name="UI" parent="." instance=ExtResource("2_6sbxi")]

[node name="GridController" type="Node" parent="." groups=["tilecontroller"]]
script = ExtResource("2_t5xrp")

[node name="AStarGridNode" type="Node2D" parent="."]
script = ExtResource("3_8ljqm")

[node name="Disposables" type="Node2D" parent="AStarGridNode"]

[node name="Rooms" type="Node2D" parent="."]

[node name="BaseRoom" parent="Rooms" instance=ExtResource("4_w0hro")]

[node name="Creatures" type="Node2D" parent="."]

[node name="Player" parent="Creatures" instance=ExtResource("5_u4826")]

[node name="Utilities" type="Node2D" parent="."]

[node name="LookTool" type="Node2D" parent="Utilities"]
script = ExtResource("6_qxpnc")

[node name="Sprite2D" type="Sprite2D" parent="Utilities/LookTool"]
texture = ExtResource("7_taxir")

[node name="FogTiles" type="TileMapLayer" parent="Utilities"]
z_index = 2
tile_set = SubResource("TileSet_eujck")
